maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: not found: value random3
  	if(random3()==0){
           ^Escaper:7: error: not found: value random3
  		if(random3==1){
                   ^