maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while(!estSurBiscuit){
  	if(random3()==0){
  		droite
  	}else{
  		if(random3==1){
  			gauche
  		}else{
  			if(!estFaceMur){
  				avance
  			}
  		}
  	}
  }
  prendBiscuit
}

